# skillra

./: .dockerignore  .env.example  .env.prod.example  .env.staging.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
apps/digest_worker/: pyproject.toml
apps/digest_worker/digest_worker/: __init__.py  __main__.py  worker.py
docs/: architecture.md  feature_dictionary_hh.md  handoff.md  product.md  production_checklist.md  runbook_prod.md  secrets_inventory.md  security.md
infra/: Caddyfile  Caddyfile.no_ratelimit  Caddyfile.staging  Dockerfile.api  Dockerfile.bot  Dockerfile.digest-worker  Dockerfile.web  Dockerfile.web.prod  data_scheduler.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  nginx.conf  pipeline_runner.sh
notebooks/: 01_hse_project.ipynb
parser/: DATA_DICTIONARY.md  README.md  hh_api_source.py  hh_scraper.py  job_source.py
requirements/: base.txt  compile_requirements.sh  dev.txt  notebook.txt
scripts/: bootstrap_active_dataset.py  check_health_contour.py  check_lock_sync.py  check_monitoring_config.py  cleanup_test_syspath.py  compose_smoke.sh  deploy_local.sh  deploy_prod.sh  env_contract.py  env_doctor.py  env_minio_roles.py  env_render.py  external_dependency_readiness.py  hh_backfill_to_minio.py  hh_compact_parquet.py  hh_daily_refresh.py  hh_historical_backfill_plan.py  hh_historical_quality_gate.py  hh_source_capability_check.py  local_start.sh  local_up.sh  minio_init.py  minio_lifecycle_policy.py  ops_health.sh  pg_backup_to_s3.py  pg_restore_drill.py  prod_pg_backup.sh  publish_hh_backfill_to_app.py  raw_hh_gate.py  release_candidate_gate.py  rollback_eligibility_report.py  run_pipeline.py  s3_restore.py  s3_sync_processed.py  s3_sync_raw_hh.py  secrets_bootstrap.py  secrets_render.py  secrets_set.py  secrets_tools_check.py  seed_meilisearch.py  (+10 more)
secrets/: .gitignore  prod.sops.yaml.example
tests/: conftest.py  test_career_path.py  test_check_health_contour.py  test_date_semantics.py  test_env_doctor.py  (+44 more)
(+292 files in other folders)
